# LiveSplitNative

./: Cargo.toml  w.lss
src/: app_settings.rs  hotkeys.rs  livesplit_state.rs  main.rs  main_window.rs  settings_window.rs  widgets.rs
src/state/: mod.rs  splits_editor.rs
src/ui/: edit_splits_window.rs  main_window.rs  mod.rs  settings_window.rs
