[package]
name = "livesplit-native"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
iced = { version = "0.13.1", features = ["image", "tokio"] }
iced_aw = "0.12.2"
iced_widget = { version = "0.13.4", features = ["lazy"] }
livesplit-core = { version = "0.13.0", features = ["rendering", "software-rendering"] }
rfd = "0.15.3"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
